@@ -1,3 +1,11 @@
+2007-07-08  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/plugin/base_plugin.py: Added focus 
+	callback that scrolls to the focused child widget in a
+	viewport plugin.
+	* plugins/interface_view.py: Removed focus callback for scrolling.
+	It is now in a superclass.
+
 2007-07-05  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.py: Handle exception from a non-existant
